@@ -4,6 +4,7 @@
 	* Incompatible changes:
 		- Modify ITable APIs about Pull Refresh(2017-03-27)
 	* Bug fixes:
+		- Fix ISelect hiding animation bug on iOS 11(2017-11-13)
 		- Fix IPopover margin-top error when nav bar hidden(2017-11-13)
 * 1.2.6
 	* New features:
